--- a/src/App/App.css
+++ b/src/App/App.css
@@ -21,3 +21,10 @@
 .resy-form {
   background-color: white;
 }
+
+.resy-container {
+  display: grid;
+  grid-template-columns: 300px 300px 300px 300px 300px;
+  grid-template-rows: 300px 300px 300px 300px;
+  margin-top: 25px;
+}
